[tool.poetry]
name = "ruff-action"
version = "0.2"
description = "A GitHub Action for Ruff Linter"
authors = ["Ruff Community"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.5.5"
pre-commit = "^3.7.1"

[tool.ruff]
target-version = "py311"
respect-gitignore = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "A",
    "ANN",
    "B",
    "C90",
    "D",
    "E",
    "F",
    "I",
    "N",
    "COM",
    "DTZ",
    "PD",
    "RUF",
    "TID",
    "UP",
    "W",
]
ignore = ["D203", "D212", "D213", "COM812", "ISC001", "E501", "UP036"]
fixable = ["I", "RUF100"]
unfixable = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
